--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="">
+<html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
-    <title>TODO</title>
+    <title>Список постов</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 <h1 th:text="${appName}" style="color: green">Default app name</h1>
+
+<ul>
+    <li th:each="p : ${posts}">
+        <p th:text="${p.text}">Текст поста</p>
+        <p>(лайков <span th:text="${p.likes}">0</span>)</p>
+    </li>
+</ul>
 </body>
 </html>
