labV2 Refactor Date

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+<body>
 <div class="container">
     <h1 th:text="${appName}" style="color: green">Default app name</h1>
     <hr/>
@@ -25,4 +26,5 @@
         </div>
     </div>
 </div>
+</body>
 </html>
